- 금연 후 신체변화 화면 UI 완료 - 메인화면 UI 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
 
         <activity android:name=".activity.CommunityActivity" />
 
-        <activity android:name=".activity.BodyChangesActivity" />
+        <activity
+            android:name=".activity.BodyChangesActivity"
+            android:theme="@style/Theme.Status.Custom" />
 
     </application>
 
