--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,16 @@ plugins {
     id 'kotlin-android'
 
     id 'kotlin-kapt'
+
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "hys.hmonkeyys.fastcampus.stopsmoking"
+        applicationId "hys.hmonkeyys.stopsmoking"
         minSdk 26
         targetSdk 30
         versionCode 1
@@ -43,10 +46,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Admob
-    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
+
+    // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-link:2.6.0"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
 }
