--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StopSmoking">
-        <activity android:name=".activity.IntroActivity">
+        <activity android:name=".activity.intro.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -37,7 +37,7 @@
         </activity>
 
         <activity
-            android:name=".activity.RegistrationActivity"
+            android:name=".activity.registration.RegistrationActivity"
             android:theme="@style/Theme.Status.Custom" />
 
         <activity
