- 화면 이동 공통함수 생성 - mvvm 진행중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,10 +44,10 @@
             android:name=".activity.main.MainActivity"
             android:theme="@style/Theme.Status.Custom" />
 
-        <activity android:name=".activity.CommunityActivity" />
+        <activity android:name=".activity.community.CommunityActivity" />
 
         <activity
-            android:name=".activity.BodyChangesActivity"
+            android:name=".activity.bodychanges.BodyChangesActivity"
             android:theme="@style/Theme.Status.Custom" />
 
         <!-- 배너 광고 -->
