--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         applicationId "hys.hmonkeyys.stopsmoking"
         minSdk 26
         targetSdk 30
-        versionCode 3
+        versionCode 4
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -61,10 +61,11 @@ dependencies {
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-storage-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'       // 앱 오류
+    implementation 'com.google.firebase:firebase-analytics-ktx'         // 애널리틱스
+    implementation 'com.google.firebase:firebase-storage-ktx'           // 저장소
+    implementation 'com.google.firebase:firebase-database-ktx'          // DataBase
+    implementation 'com.google.firebase:firebase-messaging-ktx'         // FCM
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
