--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'           // 저장소
     implementation 'com.google.firebase:firebase-database-ktx'          // DataBase
     implementation 'com.google.firebase:firebase-messaging-ktx'         // FCM
+    implementation 'com.google.firebase:firebase-firestore-ktx'         // Cloud Firestore
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
@@ -77,4 +78,5 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.1.2"
     implementation "io.insert-koin:koin-android:3.1.2"
     testImplementation "io.insert-koin:koin-test:3.1.2"
+
 }
