--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hys.hmonkeyys.stopsmoking">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- 앱이 Android 11을 타겟팅하는 경우 queries 요소를 추가해야함 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 앱이 Android 11을 타겟팅하는 경우 queries 요소를 추가해야함 -->
     <queries>
         <package android:name="com.kakao.talk" />
     </queries>
@@ -22,6 +20,7 @@
             android:theme="@style/Theme.Status.Custom">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
@@ -35,7 +34,6 @@
                     android:host="kakaolink"
                     android:scheme="@string/kakao_scheme_native_key" />
             </intent-filter>
-
         </activity>
 
         <activity
@@ -46,18 +44,19 @@
             android:name=".activity.main.MainActivity"
             android:theme="@style/Theme.Status.Custom" />
 
-        <activity android:name=".activity.community.CommunityActivity" />
+        <activity
+            android:name=".activity.community.CommunityActivity"
+            android:theme="@style/Theme.Status.Custom" />
+        <activity
+            android:name=".activity.write.WriteActivity"
+            android:theme="@style/Theme.Status.Custom" />
 
         <activity
             android:name=".activity.bodychanges.BodyChangesActivity"
-            android:theme="@style/Theme.Status.Custom" />
-
-        <!-- 배너 광고 -->
+            android:theme="@style/Theme.Status.Custom" /> <!-- 배너 광고 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/admob_app_id" />
-
-        <!-- 위젯 기능 2 X 1 -->
+            android:value="@string/admob_app_id" /> <!-- 위젯 기능 2 X 1 -->
         <receiver android:name=".widget.WidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -75,7 +74,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
