--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StopSmoking">
         <activity
-            android:name=".activity.intro.IntroActivity"
-            android:theme="@style/Theme.Status.Custom">
+            android:name=".activitys.intro.IntroActivity"
+            android:theme="@style/Theme.Status.Custom"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,19 +37,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.registration.RegistrationActivity"
+            android:name=".activitys.registration.RegistrationActivity"
             android:theme="@style/Theme.Status.Custom" />
         <activity
-            android:name=".activity.main.MainActivity"
+            android:name=".activitys.main.MainActivity"
             android:theme="@style/Theme.Status.Custom" />
         <activity
-            android:name=".activity.community.CommunityActivity"
+            android:name=".activitys.community.CommunityActivity"
             android:theme="@style/Theme.Status.Custom" />
         <activity
-            android:name=".activity.write.WriteActivity"
+            android:name=".activitys.write.WriteActivity"
             android:theme="@style/Theme.Status.Custom" />
         <activity
-            android:name=".activity.communitydetail.CommunityDetailActivity"
+            android:name=".activitys.communitydetail.CommunityDetailActivity"
             android:theme="@style/Theme.Status.Custom" />
 
         <!-- 배너 광고 -->
@@ -57,7 +58,8 @@
             android:value="@string/admob_app_id" />
 
         <!-- 위젯 기능 2 X 1 -->
-        <receiver android:name=".widget.WidgetProvider">
+        <receiver android:name=".widget.WidgetProvider"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
