--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,14 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     // Admob
-    implementation 'com.google.android.gms:play-services-ads:20.4.0'
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
     // 메시지(카카오링크)
     implementation "com.kakao.sdk:v2-link:2.6.0"
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'              // 계정
     implementation 'com.google.firebase:firebase-crashlytics-ktx'       // 앱 오류
     implementation 'com.google.firebase:firebase-analytics-ktx'         // 애널리틱스
     implementation 'com.google.firebase:firebase-storage-ktx'           // 저장소
